human-intervention-logs/org.junit.platform:junit-platform-suite-api:6.0.0/gradle-test/gradle-test-2026-05-05T07-18-18-054403Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.junit.platform:junit-platform-suite-api:6.0.0
Command: `/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:46: error: cannot find symbol
import org.junit.platform.suite.api.UseTechnicalNames;
                                   ^
  symbol:   class UseTechnicalNames
  location: package org.junit.platform.suite.api
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:244: error: cannot find symbol
    @UseTechnicalNames
     ^
  symbol:   class UseTechnicalNames
  location: class Junit_platform_suite_apiTest
/home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:56: error: cannot find symbol
        assertThat(annotationOn(ComprehensiveSuite.class, UseTechnicalNames.class)).isNotNull();
                                                          ^
  symbol:   class UseTechnicalNames
  location: class Junit_platform_suite_apiTest
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:46: error: cannot find symbol
  import org.junit.platform.suite.api.UseTechnicalNames;
                                     ^
    symbol:   class UseTechnicalNames
    location: package org.junit.platform.suite.api
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:244: error: cannot find symbol
      @UseTechnicalNames
       ^
    symbol:   class UseTechnicalNames
    location: class Junit_platform_suite_apiTest
  /home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/src/test/java/org_junit_platform/junit_platform_suite_api/Junit_platform_suite_apiTest.java:56: error: cannot find symbol
          assertThat(annotationOn(ComprehensiveSuite.class, UseTechnicalNames.class)).isNotNull();
                                                            ^
    symbol:   class UseTechnicalNames
    location: class Junit_platform_suite_apiTest
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 13s

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/tests/src/org.junit.platform/junit-platform-suite-api/6.0.0/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge9/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5854-53691991/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.junit.platform:junit-platform-suite-api:6.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 15s
9 actionable tasks: 1 executed, 8 up-to-date
